Double supersampling factor when brush size is lower than 1 px

Increasing supersampling factor from 3 to 6 smooths out the dashed effect of sub-1px strokes to almost invisible levels.

BUG:453129