libs/image/kis_base_mask_generator.h
@@ -68,6 +68,8 @@ public:
 
     virtual bool shouldSupersample() const;
 
+    virtual bool shouldSupersample6x6() const;
+
     virtual bool shouldVectorize() const;
 
     virtual KisBrushMaskApplicatorBase *applicator() const = 0;
